# expert

./: .codecov.yml  .flake8  .gitattributes  .gitignore  .pep8speaks.yml  .pre-commit-config.yaml  .readthedocs.yml  LICENSE  README.md  README.rst  README_ru.rst  __init__.py  check_it.ipynb  pyproject.toml  requirements.txt  test.py
.github/workflows/: build_with_codecov.yml  codecov.yml  mirror_repo_to_gitlab.yml
docs/source/: about.rst  conf.py  contribution.rst  faq.rst  index.rst
docs/source/components/: index.rst
docs/source/components/core/: functional_tools.rst  index.rst
docs/source/components/core/aggression/: aggression_analysis.rst  index.rst
docs/source/components/core/aggression/audio_aggression/: audio_analysis.rst  audio_tools.rst  index.rst
docs/source/components/core/aggression/text_aggression/: index.rst  text_analysis.rst  text_models_en.rst  text_models_ru.rst
docs/source/components/core/aggression/video_aggression/: anglenet.rst  face_mesh.rst  index.rst  video_analysis.rst
docs/source/components/core/antiplagiarism/: antiplagiarism_module.rst  index.rst
docs/source/components/core/antiplagiarism/plagiarism_tools/: index.rst  logger.rst  schemas.rst
docs/source/components/core/confidence/: confidence_analysis.rst  index.rst
docs/source/components/core/congruence/: congruence_analysis.rst  index.rst
docs/source/components/core/congruence/audio_emotions/: audio_analysis.rst  audio_model.rst  index.rst
docs/source/components/core/congruence/text_emotions/: index.rst  text_analysis.rst  text_model.rst
docs/source/components/core/congruence/video_emotions/: index.rst  video_analysis.rst  video_model.rst
docs/source/components/core/contradiction/: contradiction_analysis.rst  index.rst
docs/source/components/core/contradiction/contr_tools/: NLIModel.rst  index.rst  model_tools.rst
docs/source/components/data/: annotation.rst  detection.rst  diarization.rst  feature_extractor.rst  index.rst  video_reader.rst
docs/source/expert/: expert.rst  index.rst  installation.rst  quickstart.rst
examples/cases/: call_analysis_topic_extraction.ipynb  call_stats.py  example_utils.py
examples/core_modules/: congruence_example.ipynb
expert/core/: __init__.py  functional_tools.py  utils.py
expert/core/aggression/: __init__.py  aggression_analysis.py
expert/core/aggression/audio_aggression/: __init__.py  audio_analysis.py  audio_tools.py
expert/core/aggression/text_aggression/: __init__.py  text_analysis.py  text_models_en.py  text_models_ru.py
expert/core/aggression/video_aggression/: __init__.py  anglenet.py  face_mesh.py  video_analysis.py
expert/core/antiplagiarism/: __init__.py  antiplagiarism_module.py
expert/core/antiplagiarism/plagiarism_tools/: logger.py  schemas.py
expert/core/confidence/: README.md  __init__.py  confidence_analysis.py  pyproject.toml
expert/core/confidence/configs/: landmarks_audio_transformer.py  landmarks_transformer.py
expert/core/confidence/configs/datasets/: interviews.py
expert/core/confidence/liedet/data/: __init__.py  transforms.py  video_folder.py  video_reader.py
expert/core/confidence/liedet/datasets/: __init__.py  builder.py  interviews.py
expert/core/confidence/liedet/models/: __init__.py  base_module.py  builder.py  e2e.py  pipeline.py  registry.py
expert/core/confidence/liedet/models/backbones/: ast.py  mm_transformer.py  timesformer.py
expert/core/confidence/liedet/models/common/: __init__.py  connectors.py  transformer.py
expert/core/confidence/requirements/: dev-requirements.txt  environment-cpu.yml  environment-cu102.yml  environment-cu113.yml  requirements-cpu.txt  requirements-cu102.txt  requirements-cu113.txt  requirements.txt
expert/core/congruence/: __init__.py  congruence_analysis.py
expert/core/congruence/audio_emotions/: audio_analysis.py  audio_model.py
expert/core/congruence/text_emotions/: text_analysis.py  text_model.py
expert/core/congruence/video_emotions/: video_analysis.py  video_model.py
expert/core/contradiction/: README.md  __init__.py  contradiction_analysis.py
expert/core/contradiction/contr_tools/: NLIModel.py  model_tools.py
expert/core/distortion/: __init__.py  dist_model.py  distortion_analysis.py
expert/core/evasiveness/: README.md  evas_models.py  evasiveness_analysis.py  models.py  rf_evas_model.pickle  rf_evas_model_ru.pickle
expert/core/evasiveness/weights/: rf_evas_model_ru.pickle
expert/core/insult/: README.md  __init__.py  insult_detector.py
expert/core/terms_extractor/: README.md  __init__.py  get_terms.py
expert/core/terms_extractor/app/: extractor.py  text_preprocessing.py  util.py  work_with_terms.py
expert/core/terms_extractor/tools/: extractor.py  text_preprocessing.py  work_with_terms.py
expert/data/: __init__.py  feature_extractor.py  video_reader.py
expert/data/annotation/: __init__.py  speech_to_text.py  summarization.py  transcribe.py
expert/data/detection/: __init__.py  face_detector.py  inception_resnet_v1.py
expert/data/diarization/: __init__.py  audio_transforms.py  speaker_diarization.py
requirements/: aggression.txt  antiplagiarism.txt  congruence.txt  contradiction.txt  features_extraction.txt
test/: test_stub.py
test/assets/: dialogue_transcription.json  insult_transcription.json
test/assets/videos/dialogue/: diarization.json  features.json  text.txt  transcription.json
test/unit/core/: test_aggression_model.py  test_audio_emotions.py  test_congruence.py  test_contradiction.py  test_distortion_model.py  test_evasiveness.py  test_insult_detector.py  test_terms_extractor.py  test_text_emotions.py
test/unit/data/: test_diarization.py  test_face_detector.py  test_feature_extraction.py  test_insult_detector.py  test_summarization.py  test_video_reader.py
test/unit/data/test_insult/: transcription.json
weights/evasiveness/: rf_evas_model.pickle
weights/insult/: linear_en.pkl  linear_en_transformer.pkl  linear_ru.pkl  linear_ru_transformer.pkl
weights/terms_extractor/: en_term_index.pickle  en_term_index_3.5.pickle  ru_term_index_3.5.pickle  ru_term_index_4.pickle
(+31 files in other folders)
