[project]
name = "expert"
version = "0.1.0"
description = "Assessing the validity of expert opinion based on the analysis of video content"
authors = [
    { name = "Anatolii Medvedev", email = "anatolmdvdv@gmail.com" },
    { name = "Ivan Smirnov", email = "1vany1@mail.ru" },
    { name = "Timur Samigulin", email = "timursamigulin98@gmail.com" },
    { name = "Nikita Nosov", email = "nnmastodont@gmail.com" },
]
dependencies = []
requires-python = "~=3.9.0" # TODO python3.9-full python3.9-dev
readme = "README.rst"
license = { text = "BSD-3-Clause-Clear" }

[project.optional-dependencies]
aggression = [
    "torch~=1.13.1",
    "torchaudio~=0.13.1",
    "librosa~=0.9.2",
    "decord~=0.6.0",
    "numpy~=1.23.5",
    "pandas~=1.5.3",
    "detoxify~=0.5.1",
    "nltk~=3.8.1",
    "flair~=0.11.3",
    "pymorphy2~=0.9.1",
    "transformers~=4.22.1",
    "regex~=2022.10.31",
    "svgling~=0.3.1",
]
congruence = [
    "torch~=1.13.1",
    "torchaudio~=0.13.1",
    "decord~=0.6.0",
    "gdown~=4.4.0",
    "pandas~=1.5.3",
    "numpy~=1.23.5",
    "transformers~=4.22.1",
    "torchvision~=0.14.1",
    "opencv-python~=4.7.0.68",
]
confidence = [
    "torch~=1.13.1",
    "torchaudio~=0.13.1",
    "torchvision~=0.14.1",
    "decord~=0.6.0",
    "einops~=0.3.0",
    "librosa~=0.9.2",
    "pydub~=0.25.1",
    "soundfile~=0.10.3.post1",
    "noisereduce~=2.0.0",
    "moviepy~=1.0.3",
    "pandas~=1.5.3",
    "Signal_Analysis~=0.1.26",
    "av~=8.1.0",
    "mediapipe~=0.9.1.0",
    "vg~=2.0.0",
    "mmcv-full~=1.4.6",
    "mmdet~=2.22.0",
    "mmaction2~=0.21.0",
]
contradiction = ["torch~=1.13.1", "gdown~=4.4.0", "transformers~=4.22.1"]
features-extraction = [
    "torch~=1.13.1",
    "whisper-openai~=1.0.0",
    "transformers~=4.22.1",
    "sumy~=0.11.0",
    "text_preprocessing~=0.1.1",
    "razdel~=0.5.0",
    "gdown~=4.4.0",
    "mediapipe~=0.9.1.0",
    "torchvision~=0.14.1",
    "albumentations~=1.3.0",
    "opencv-python~=4.7.0.68",
    "pyannote.audio~=2.1.1",
    "decord~=0.6.0",
    "scikit-learn~=1.2.1",
    "tqdm~=4.64.1",
    "pandas~=1.5.3",
    "numpy~=1.23.5",
    "dtw-python~=1.3.0",
]
antiplagiarism = [
    "zeep~=4.2.1",
    "httpx~=0.23.1",
    "suds~=1.1.2",
    "pydantic~=1.10.2",
]

[build-system]
requires = ["pdm-pep517>=1.0"]
build-backend = "pdm.pep517.api"

[tool.pdm.scripts]
post_install = "pip install catalyst~=22.2.1" # из-за бага https://github.com/pdm-project/pdm/issues/1765

[tool.pdm.dev-dependencies]
tools = ["pip~=23.0", "pre-commit~=3.0.3"]
linters = ["flake8~=6.0.0", "black~=23.1.0", "isort~=5.12.0"]
security = ["bandit~=1.7.4"]
test = [
    "pytest~=7.2.1",
    "pytest-asyncio~=0.20.3",
    "pytest-randomly~=3.12.0",
    "pytest-cov~=4.0.0",
]

[tool.black]
line-length = 80
verbose = 1
color = true

[tool.isort]
profile = "black"
lines_after_imports = 2
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
line_length = 80

[tool.bandit]
exclude_dirs = [".venv"]
skips = ["B101"]
